Refactoring packages; full implementations for Java 9-11