@@ -29,20 +29,15 @@
  * OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
  * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  */
-import net.tascalate.instrument.api.AllowDynamicClasses;
-import net.tascalate.instrument.examples.app.dynamic.OpenPackage;
+package net.tascalate.instrument.spi;
 
-/**
- * 
- */
-/**
- * @author vsilaev
- *
- */
-// Alternative with --add-opens java.base/java.lang=net.tascalate.instrument.emitter;
-@AllowDynamicClasses(OpenPackage.class)
-module net.tascalate.instrument.examples.app {
-requires net.tascalate.instrument.emitter;
+final class EmptyClassEmitters implements ClassEmitters.Factory {
+    private EmptyClassEmitters() {}
 
-    opens net.tascalate.instrument.examples.app.dynamic to net.tascalate.instrument.emitter;
+    @Override
+    public ClassEmitter create(String packageName) {
+        return null;
+    }
+    
+    static final ClassEmitters.Factory INSTANCE = new EmptyClassEmitters();
 }
